--- a/appsearch/appsearch-test-util/build.gradle
+++ b/appsearch/appsearch-test-util/build.gradle
@@ -14,6 +14,7 @@
  * limitations under the License.
  */
 import androidx.build.LibraryGroups
+import androidx.build.LibraryType
 import androidx.build.LibraryVersions
 import androidx.build.Publish
 
@@ -37,6 +38,7 @@ dependencies {
 
 androidx {
     name = 'AppSearch Test Util'
+    type = LibraryType.INTERNAL_TEST_LIBRARY
     publish = Publish.NONE
     mavenGroup = LibraryGroups.APPSEARCH
     inceptionYear = '2021'
