--- a/security/security-app-authenticator-testing/build.gradle
+++ b/security/security-app-authenticator-testing/build.gradle
@@ -40,7 +40,7 @@ android {
 
 androidx {
     name = "Android Security App Package Authenticator Testing"
-    type = LibraryType.PUBLISHED_LIBRARY
+    type = LibraryType.PUBLISHED_TEST_LIBRARY
     mavenVersion = LibraryVersions.SECURITY_APP_AUTHENTICATOR_TESTING
     mavenGroup = LibraryGroups.SECURITY
     inceptionYear = "2021"
