--- a/external/libyuv/build.gradle
+++ b/external/libyuv/build.gradle
@@ -14,6 +14,10 @@
  * limitations under the License.
  */
 
+import androidx.build.LibraryGroups
+import androidx.build.LibraryType
+import androidx.build.Publish
+
 apply plugin: 'AndroidXPlugin'
 apply plugin: 'com.android.library'
 
@@ -52,6 +56,15 @@ android {
             name "yuv"
         }
     }
+}
+
+androidx {
+    name = "libyuv"
+    // Only intended to be used as snapshots, do not change to PUBLISHED.
+    publish = Publish.SNAPSHOT_ONLY
+    mavenGroup = LibraryGroups.LIBYUV
+    inceptionYear = "2021"
+    description = "libyuv is an open source project that includes YUV scaling and conversion functionality."
 }
 
 // Entire block is to workaround b/203448887
