Define androidx.wear.watchface.MULTIPLE_INSTANCES_ALLOWED
This is meta data key to inform the system that it's OK for the
user to create multiple instances of this watch face.

Bug: 207322736
Bug: 192981547
Test: N/A
Change-Id: I84469a5b2796b5a856564f3b7361795fba86ec18

--- a/wear/watchface/watchface/samples/src/main/AndroidManifest.xml
+++ b/wear/watchface/watchface/samples/src/main/AndroidManifest.xml
@@ -63,6 +63,9 @@
                 android:name="android.service.wallpaper"
                 android:resource="@xml/watch_face" />
             <meta-data
+                android:name="androidx.wear.watchface.MULTIPLE_INSTANCES_ALLOWED"
+                android:value="true" />
+            <meta-data
                 android:name=
                     "com.google.android.wearable.watchface.companionBuiltinConfigurationEnabled"
                 android:value="true" />
@@ -93,6 +96,9 @@
                 android:name="android.service.wallpaper"
                 android:resource="@xml/watch_face" />
             <meta-data
+                android:name="androidx.wear.watchface.MULTIPLE_INSTANCES_ALLOWED"
+                android:value="true" />
+            <meta-data
                 android:name=
                     "com.google.android.wearable.watchface.companionBuiltinConfigurationEnabled"
                 android:value="true" />
@@ -122,6 +128,9 @@
             <meta-data
                 android:name="android.service.wallpaper"
                 android:resource="@xml/watch_face" />
+            <meta-data
+                android:name="androidx.wear.watchface.MULTIPLE_INSTANCES_ALLOWED"
+                android:value="true" />
             <meta-data
                 android:name=
                     "com.google.android.wearable.watchface.companionBuiltinConfigurationEnabled"
