Make the library name readable and fix typo in the description
Test: NA
Bug: 204803011
Change-Id: Iec0b5992ad1a7d55149b8b6f8b6d9369ff2121ad

--- a/core/core-performance/samples/build.gradle
+++ b/core/core-performance/samples/build.gradle
@@ -31,7 +31,7 @@ dependencies {
 }
 
 androidx {
-    name = "Core Performance Samples"
+    name = "cSamples"
     type = LibraryType.SAMPLES
     mavenVersion = LibraryVersions.CORE_PERFORMANCE
     mavenGroup = LibraryGroups.CORE
