Use the default robolectric version
Bug: 206673076
Test: gradlew :core:core-performance:testDebugUnitTest
Relnote: Use the defalt robolectric version
Change-Id: Ib131aebaeafa49f444f067a79fc77fd0dec997c3

--- a/core/core-performance/build.gradle
+++ b/core/core-performance/build.gradle
@@ -31,7 +31,7 @@ dependencies {
     testImplementation(libs.kotlinStdlib)
     testImplementation(libs.junit)
     testImplementation(libs.truth)
-    testImplementation("org.robolectric:robolectric:4.7") // TODO(b/206673076): use libs.robolectric
+    testImplementation(libs.robolectric)
 }
 
 androidx {
