Create skeleton directory structure for wear-tiles-material.
Relnote: n/a
Test: Still builds.
Change-Id: I73468cbe77bc3964fdc24d4b9091f4a7db706d28

--- a/docs-tip-of-tree/build.gradle
+++ b/docs-tip-of-tree/build.gradle
@@ -272,8 +272,10 @@ dependencies {
     docs(project(":wear:wear-phone-interactions"))
     docs(project(":wear:wear-remote-interactions"))
     docs(project(":wear:tiles:tiles"))
+    docs(project(":wear:tiles:tiles-material"))
     docs(project(":wear:tiles:tiles-proto"))
     docs(project(":wear:tiles:tiles-renderer"))
+    docs(project(":wear:tiles:tiles-testing"))
     docs(project(":wear:watchface:watchface"))
     docs(project(":wear:watchface:watchface-complications"))
     docs(project(":wear:watchface:watchface-complications-data"))
