--- a/car/app/app/build.gradle
+++ b/car/app/app/build.gradle
@@ -52,7 +52,7 @@ dependencies {
     // OnBackPressedDispatcher is part of the API
     api("androidx.activity:activity:1.2.0")
     implementation("androidx.annotation:annotation:1.2.0")
-    implementation("androidx.core:core:1.5.0-rc01")
+    implementation("androidx.core:core:1.7.0")
     implementation("androidx.lifecycle:lifecycle-viewmodel:2.2.0")
     // Session and Screen both implement LifeCycleOwner so this needs to be exposed.
     api("androidx.lifecycle:lifecycle-common-java8:2.2.0")
