Add prefab tasks as explicit dependency of cmake tasks in effort to work around build flakes
Bug: 206464070
Test: N/A
Change-Id: I9d296075262041e858fecbe6240f09a28d67f02f

--- a/camera/camera-core/build.gradle
+++ b/camera/camera-core/build.gradle
@@ -66,6 +66,18 @@ dependencies {
     androidTestImplementation(project(":internal-testutils-truth"))
 }
 
+// Added in hopes of ensuring prefab artifacts are available by the time CMake runs and preventing
+// flakes like b/209000511 and b/206464070
+afterEvaluate {
+    tasks.named("configureCMakeDebug").configure {
+        dependsOn(":external:libyuv:prefabDebugPackage")
+    }
+
+    tasks.named("configureCMakeRelWithDebInfo").configure {
+        dependsOn(":external:libyuv:prefabReleasePackage")
+    }
+}
+
 android {
     defaultConfig {
         multiDexEnabled = true
