Allow listening for ComponentActivity's onNewIntent()
Rather than requiring subclasses of ComponentActivity
override onNewIntent() to pass it onto interested
listeners, allow any component (either internal to the
activity or outside of it) to add a listener for these
events.

It also means that FragmentActivity can move its
preprocessing (in unlocking the fragment state) to
this new API and skip overriding onNewIntent at all.

Relnote: "`ComponentActivity` now implements the new
`OnNewIntentProvider` interface to allow
any component to receive these events."
BUG: 71584872
Test: ComponentActivityCallbacksTest suite

Change-Id: If1f8baabb64aa4aa776303bab33322969776b10d

--- a/activity/activity/src/androidTest/AndroidManifest.xml
+++ b/activity/activity/src/androidTest/AndroidManifest.xml
@@ -50,6 +50,10 @@
             android:name="androidx.activity.EmptyContentActivity"
             android:exported="true" />
         <activity
+            android:name="androidx.activity.SingleTopActivity"
+            android:launchMode="singleTop"
+            android:exported="true" />
+        <activity
             android:name="androidx.activity.AutoRestarterActivity"
             android:exported="true" />
         <activity
