--- a/compose/material/material-ripple/build.gradle
+++ b/compose/material/material-ripple/build.gradle
@@ -34,7 +34,7 @@ dependencies {
          * When updating dependencies, make sure to make the an an analogous update in the
          * corresponding block below
          */
-        api(project(":compose:foundation:foundation"))
+        api("androidx.compose.foundation:foundation:1.1.0-rc01")
         api(project(":compose:runtime:runtime"))
 
         implementation(libs.kotlinStdlibCommon)
