--- a/compose/material/material/build.gradle
+++ b/compose/material/material/build.gradle
@@ -35,16 +35,16 @@ dependencies {
          * corresponding block below
          */
         api("androidx.compose.animation:animation-core:1.0.0")
-        api(project(":compose:foundation:foundation"))
+        api("androidx.compose.foundation:foundation:1.1.0-rc01")
         api(project(":compose:material:material-icons-core"))
         api(project(":compose:material:material-ripple"))
         api(project(":compose:runtime:runtime"))
-        api(project(":compose:ui:ui"))
+        api("androidx.compose.ui:ui:1.1.0-rc01")
         api("androidx.compose.ui:ui-text:1.0.0")
 
         implementation(libs.kotlinStdlibCommon)
         implementation("androidx.compose.animation:animation:1.0.0")
-        implementation(project(":compose:foundation:foundation-layout"))
+        implementation("androidx.compose.foundation:foundation-layout:1.1.0-rc01")
         implementation("androidx.compose.ui:ui-util:1.0.0")
 
         // TODO: remove next 3 dependencies when b/202810604 is fixed
