--- a/compose/ui/ui-tooling/build.gradle
+++ b/compose/ui/ui-tooling/build.gradle
@@ -33,7 +33,7 @@ dependencies {
         implementation(libs.kotlinStdlib)
 
         api("androidx.annotation:annotation:1.1.0")
-        implementation(project(":compose:animation:animation"))
+        implementation("androidx.compose.animation:animation:1.1.0-rc01")
 
         api(project(":compose:runtime:runtime"))
         api(project(":compose:ui:ui"))
