--- a/compose/foundation/foundation-layout/build.gradle
+++ b/compose/foundation/foundation-layout/build.gradle
@@ -36,8 +36,8 @@ dependencies {
          */
 
         api("androidx.annotation:annotation:1.1.0")
-        api(project(":compose:ui:ui"))
-        api(project(":compose:ui:ui-unit"))
+        api("androidx.compose.ui:ui:1.1.0-rc01")
+        api("androidx.compose.ui:ui-unit:1.1.0-rc01")
 
         implementation(project(":compose:runtime:runtime"))
         implementation("androidx.compose.ui:ui-util:1.0.0")
