--- a/compose/animation/animation-graphics/build.gradle
+++ b/compose/animation/animation-graphics/build.gradle
@@ -39,7 +39,7 @@ dependencies {
         api(project(":compose:animation:animation"))
         api("androidx.compose.foundation:foundation-layout:1.0.0")
         api(project(":compose:runtime:runtime"))
-        api(project(":compose:ui:ui"))
+        api("androidx.compose.ui:ui:1.1.0-rc01")
         api("androidx.compose.ui:ui-geometry:1.0.0")
 
         implementation("androidx.compose.ui:ui-util:1.0.0")
