Pin Wear Compose dependencies on other modules to Compose 1.1.0-rc01
This let's us release it independently of
other modules and no need 1.2.0-alpha01 to release.

Test: gw compileReleaseKotlin
Test: gw -Pandroidx.compose.multiplatformEnabled=true compileReleaseKotlin
Change-Id: Ib5ae6db7cd4dc90c7614d4402816bd3478843d7a

--- a/wear/compose/compose-navigation/build.gradle
+++ b/wear/compose/compose-navigation/build.gradle
@@ -28,8 +28,8 @@ plugins {
 dependencies {
     kotlinPlugin(project(":compose:compiler:compiler"))
 
-    api(project(":compose:ui:ui"))
-    api(project(":compose:runtime:runtime"))
+    api("androidx.compose.ui:ui:1.1.0-rc01")
+    api("androidx.compose.runtime:runtime:1.1.0-rc01")
     api("androidx.navigation:navigation-runtime:2.4.0-rc01")
     api(project(":wear:compose:compose-material"))
 
