--- a/wear/compose/compose-foundation/build.gradle
+++ b/wear/compose/compose-foundation/build.gradle
@@ -31,13 +31,13 @@ dependencies {
     kotlinPlugin(project(":compose:compiler:compiler"))
 
     if(!AndroidXComposePlugin.isMultiplatformEnabled(project)) {
-        api(project(":compose:foundation:foundation"))
-        api(project(":compose:ui:ui"))
-        api(project(":compose:ui:ui-text"))
-        api(project(":compose:runtime:runtime"))
+        api("androidx.compose.foundation:foundation:1.1.0-rc01")
+        api("androidx.compose.ui:ui:1.1.0-rc01")
+        api("androidx.compose.ui:ui-text:1.1.0-rc01")
+        api("androidx.compose.runtime:runtime:1.1.0-rc01")
 
         implementation(libs.kotlinStdlib)
-        implementation(project(":compose:foundation:foundation-layout"))
+        implementation("androidx.compose.foundation:foundation-layout:1.1.0-rc01")
 
         testImplementation(libs.testRules)
         testImplementation(libs.testRunner)
