:external:libyuv:prefab*Package now asserting existence of abi.json after completion
to help us narrow down why these files subsequently appear missing

Bug: 206464070

Test: ./gradlew :external:libyuv:prefabDebugPackage
Test: ./gradlew :external:libyuv:prefabReleasePackage
Change-Id: I1813f2f7a50aebfcf9f13afd9793ef691323557d

--- a/external/libyuv/build.gradle
+++ b/external/libyuv/build.gradle
@@ -78,4 +78,20 @@ afterEvaluate {
     tasks.named("reportLibraryMetrics").configure {
         it.dependsOn("prefabReleaseConfigurePackage")
     }
+    tasks.named("prefabReleasePackage").configure {
+        def releaseAbiJson = project.file("$buildDir/intermediates/prefab_package/release/prefab/modules/yuv/libs/android.armeabi-v7a/abi.json")
+        it.doLast {
+            if (!releaseAbiJson.exists()) {
+                throw new GradleException("$releaseAbiJson does not exist")
+            }
+        }
+    }
+    tasks.named("prefabDebugPackage").configure {
+        def debugAbiJson = project.file("$buildDir/intermediates/prefab_package/debug/prefab/modules/yuv/libs/android.armeabi-v7a/abi.json")
+        it.doLast {
+            if (!debugAbiJson.exists()) {
+                throw new GradleException("$debugAbiJson does not exist")
+            }
+        }
+    }
 }
