Add android:process to app-automotive and app-project
Bug: 206040593
Test: Manual in showcase
Change-Id: I9a970b741103e54aaf329f0eaee4121da8ab7729

--- a/car/app/app-projected/src/main/AndroidManifest.xml
+++ b/car/app/app-projected/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
             android:name="androidx.car.app.CarAppMetadataHolderService"
             android:exported="false"
             android:enabled="false"
+            android:process=""
             tools:ignore="Instantiatable"
             tools:node="merge">
             <meta-data
