--- a/car/app/app-automotive/src/main/AndroidManifest.xml
+++ b/car/app/app-automotive/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
             android:name="androidx.car.app.CarAppMetadataHolderService"
             android:exported="false"
             android:enabled="false"
+            android:process=""
             tools:ignore="Instantiatable"
             tools:node="merge">
             <meta-data
