--- a/work/work-inspection/build.gradle
+++ b/work/work-inspection/build.gradle
@@ -31,7 +31,7 @@ dependencies {
     compileOnly("androidx.inspection:inspection:1.0.0")
     compileOnly("androidx.lifecycle:lifecycle-runtime:2.2.0")
     compileOnly(project(":work:work-runtime"))
-    compileOnly("androidx.room:room-runtime:2.2.5")
+    compileOnly("androidx.room:room-runtime:2.4.0-rc01")
     androidTestImplementation(project(":inspection:inspection-testing"))
     androidTestImplementation(project(":work:work-runtime"))
     androidTestImplementation(project(":work:work-runtime-ktx"))
