--- a/work/work-benchmark/build.gradle
+++ b/work/work-benchmark/build.gradle
@@ -28,7 +28,7 @@ dependencies {
     androidTestImplementation(project(":work:work-runtime-ktx"))
     androidTestImplementation(project(":work:work-multiprocess"))
     androidTestImplementation(projectOrArtifact(":benchmark:benchmark-junit4"))
-    androidTestImplementation("androidx.room:room-runtime:2.2.5")
+    androidTestImplementation("androidx.room:room-runtime:2.4.0-rc01")
     androidTestImplementation(libs.junit)
     androidTestImplementation(libs.testExtJunit)
     androidTestImplementation(libs.testCore)
