--- a/work/work-runtime/build.gradle
+++ b/work/work-runtime/build.gradle
@@ -51,9 +51,9 @@ android {
 
 dependencies {
     implementation("androidx.core:core:1.6.0")
-    annotationProcessor("androidx.room:room-compiler:2.2.5")
-    implementation("androidx.room:room-runtime:2.2.5")
-    androidTestImplementation("androidx.room:room-testing:2.2.5")
+    annotationProcessor("androidx.room:room-compiler:2.4.0-rc01")
+    implementation("androidx.room:room-runtime:2.4.0-rc01")
+    androidTestImplementation("androidx.room:room-testing:2.4.0-rc01")
     implementation("androidx.sqlite:sqlite:2.1.0")
     implementation("androidx.sqlite:sqlite-framework:2.1.0")
     api("androidx.annotation:annotation-experimental:1.0.0")
