--- a/work/work-testing/build.gradle
+++ b/work/work-testing/build.gradle
@@ -26,7 +26,7 @@ plugins {
 dependencies {
     api(project(":work:work-runtime-ktx"))
     implementation("androidx.lifecycle:lifecycle-livedata-core:2.1.0")
-    implementation("androidx.room:room-runtime:2.2.5")
+    implementation("androidx.room:room-runtime:2.4.0-rc01")
 
     androidTestImplementation("androidx.arch.core:core-testing:2.1.0")
     androidTestImplementation(libs.testExtJunit)
