Add samples for SwipeDismissableNavHost.
Test: androidx.wear.compose.navigation

Bug: 204978692

Relnote: "Added samples for SwipeDismissableNavHost."
Change-Id: I85f063563bd521badf131943dbe49754a408c153

--- a/wear/compose/compose-navigation/build.gradle
+++ b/wear/compose/compose-navigation/build.gradle
@@ -41,7 +41,10 @@ dependencies {
     androidTestImplementation(project(":compose:test-utils"))
     androidTestImplementation(libs.testRunner)
     androidTestImplementation(project(":wear:compose:compose-material"))
+    androidTestImplementation(project(":wear:compose:compose-navigation-samples"))
     androidTestImplementation(libs.truth)
+
+    samples(project(":wear:compose:compose-navigation-samples"))
 }
 
 android {
