--- a/docs-public/build.gradle
+++ b/docs-public/build.gradle
@@ -169,19 +169,19 @@ dependencies {
     docs("androidx.media2:media2-widget:1.2.0")
     docs("androidx.media:media:1.5.0-beta01")
     docs("androidx.mediarouter:mediarouter:1.2.5")
-    docs("androidx.navigation:navigation-common:2.4.0-beta02")
-    docs("androidx.navigation:navigation-common-ktx:2.4.0-beta02")
-    docs("androidx.navigation:navigation-compose:2.4.0-beta02")
-    samples("androidx.navigation:navigation-compose-samples:2.4.0-beta02")
-    docs("androidx.navigation:navigation-dynamic-features-fragment:2.4.0-beta02")
-    docs("androidx.navigation:navigation-dynamic-features-runtime:2.4.0-beta02")
-    docs("androidx.navigation:navigation-fragment:2.4.0-beta02")
-    docs("androidx.navigation:navigation-fragment-ktx:2.4.0-beta02")
-    docs("androidx.navigation:navigation-runtime:2.4.0-beta02")
-    docs("androidx.navigation:navigation-runtime-ktx:2.4.0-beta02")
-    docs("androidx.navigation:navigation-testing:2.4.0-beta02")
-    docs("androidx.navigation:navigation-ui:2.4.0-beta02")
-    docs("androidx.navigation:navigation-ui-ktx:2.4.0-beta02")
+    docs("androidx.navigation:navigation-common:2.4.0-rc01")
+    docs("androidx.navigation:navigation-common-ktx:2.4.0-rc01")
+    docs("androidx.navigation:navigation-compose:2.4.0-rc01")
+    samples("androidx.navigation:navigation-compose-samples:2.4.0-rc01")
+    docs("androidx.navigation:navigation-dynamic-features-fragment:2.4.0-rc01")
+    docs("androidx.navigation:navigation-dynamic-features-runtime:2.4.0-rc01")
+    docs("androidx.navigation:navigation-fragment:2.4.0-rc01")
+    docs("androidx.navigation:navigation-fragment-ktx:2.4.0-rc01")
+    docs("androidx.navigation:navigation-runtime:2.4.0-rc01")
+    docs("androidx.navigation:navigation-runtime-ktx:2.4.0-rc01")
+    docs("androidx.navigation:navigation-testing:2.4.0-rc01")
+    docs("androidx.navigation:navigation-ui:2.4.0-rc01")
+    docs("androidx.navigation:navigation-ui-ktx:2.4.0-rc01")
     docs("androidx.paging:paging-common:3.1.0")
     docs("androidx.paging:paging-common-ktx:3.1.0")
     docs("androidx.paging:paging-compose:1.0.0-alpha15")
