--- a/hilt/hilt-navigation-compose/build.gradle
+++ b/hilt/hilt-navigation-compose/build.gradle
@@ -42,7 +42,7 @@ dependencies {
     api("androidx.compose.runtime:runtime:1.0.1")
     api("androidx.compose.ui:ui:1.0.1")
     api("androidx.lifecycle:lifecycle-viewmodel-compose:2.4.0")
-    api("androidx.navigation:navigation-compose:2.4.0-beta02")
+    api("androidx.navigation:navigation-compose:2.4.0-rc01")
 
     androidTestImplementation(libs.testExtJunit)
     androidTestImplementation(libs.testCore)
