Fix a build warning that is causing the presubmit to fail on the release branch
Bug: N/A
Relnote: N/A
Test: N/A
Change-Id: I6f01093d4be252259d32c7ac2b6bf0432f1f136c

--- a/car/app/app-automotive/build.gradle
+++ b/car/app/app-automotive/build.gradle
@@ -32,7 +32,9 @@ dependencies {
     implementation("androidx.core:core:1.7.0")
     implementation(libs.autoValueAnnotations)
     implementation("androidx.annotation:annotation-experimental:1.1.0")
-    implementation libs.kotlinStdlib // Due to :annotation-experimental
+    // There is an implicit compile-only dep due to :annotation-experimental
+    // Build will complain without this manual declaration.
+    compileOnly libs.kotlinStdlib
 
     annotationProcessor(libs.nullaway)
     annotationProcessor(libs.autoValue)
