--- a/car/app/app-projected/build.gradle
+++ b/car/app/app-projected/build.gradle
@@ -28,7 +28,9 @@ dependencies {
 
     implementation("androidx.annotation:annotation:1.2.0")
     implementation("androidx.annotation:annotation-experimental:1.1.0")
-    implementation libs.kotlinStdlib // Due to :annotation-experimental
+    // There is an implicit compile-only dep due to :annotation-experimental
+    // Build will complain without this manual declaration.
+    compileOnly libs.kotlinStdlib
 
     testImplementation("junit:junit:4.13")
     testImplementation(libs.testCore)
