--- a/car/app/app-testing/build.gradle
+++ b/car/app/app-testing/build.gradle
@@ -29,7 +29,9 @@ dependencies {
     implementation 'androidx.annotation:annotation:1.1.0'
     implementation(libs.robolectric)
     implementation("androidx.annotation:annotation-experimental:1.1.0")
-    compileOnly libs.kotlinStdlib // Due to :annotation-experimental
+    // There is an implicit compile-only dep due to :annotation-experimental
+    // Build will complain without this manual declaration.
+    compileOnly libs.kotlinStdlib
 
     testImplementation("junit:junit:4.13")
     testImplementation(libs.testCore)
