Fix a build warning that is causing the presubmit to fail on the release branch (part 2)
Bug: 208647778
Relnote: N/A
Test: N/A
Change-Id: I706fd6593c979aa2969661f3d55ba3542cb5ac81

--- a/car/app/app/build.gradle
+++ b/car/app/app/build.gradle
@@ -56,10 +56,10 @@ dependencies {
     implementation("androidx.lifecycle:lifecycle-viewmodel:2.2.0")
     // Session and Screen both implement LifeCycleOwner so this needs to be exposed.
     api("androidx.lifecycle:lifecycle-common-java8:2.2.0")
-    implementation("androidx.annotation:annotation-experimental:1.1.0")
+    api("androidx.annotation:annotation-experimental:1.1.0")
     // There is an implicit compile-only dep due to :annotation-experimental
     // Build will complain without this manual declaration.
-    compileOnly libs.kotlinStdlib
+    api(libs.kotlinStdlib) // Added for annotation-experimental
 
     annotationProcessor(libs.nullaway)
 
