--- a/car/app/app-automotive/build.gradle
+++ b/car/app/app-automotive/build.gradle
@@ -31,10 +31,10 @@ dependencies {
     implementation("androidx.annotation:annotation:1.1.0")
     implementation("androidx.core:core:1.7.0")
     implementation(libs.autoValueAnnotations)
-    implementation("androidx.annotation:annotation-experimental:1.1.0")
+    api("androidx.annotation:annotation-experimental:1.1.0")
     // There is an implicit compile-only dep due to :annotation-experimental
     // Build will complain without this manual declaration.
-    compileOnly libs.kotlinStdlib
+    api(libs.kotlinStdlib)
 
     annotationProcessor(libs.nullaway)
     annotationProcessor(libs.autoValue)
