Add proguard rule for appwidget proto
- Change relocate name to correct package
- Add proguard-rules.pro to keep generated proto classes

Fix: 209468516
Test: manual
Change-Id: I2f9729dc07d8c5cd7beeba70ec834e93e9d4721f

--- a/glance/glance-appwidget-proto/build.gradle
+++ b/glance/glance-appwidget-proto/build.gradle
@@ -51,7 +51,7 @@ jar {
 shadowJar {
     archiveClassifier = ''
     configurations = [project.configurations.shadowed]
-    relocate "com.google.protobuf", "glance.appwidget.proto.relocated"
+    relocate "com.google.protobuf", "androidx.glance.appwidget.proto"
 
     // libs.protobufLite ships with a standard set of proto files in the JAR, which clash if this
     // library is included from two different downstream libraries. exclude("*.proto") (or
