Assert the existance of prefab.json files as well as abi.json to help debug cmake related build flakes
Bug: 206464070
Test: N/A
Change-Id: Ieb8bedce9487690b9002ec101f5f3896c1fd9d38

--- a/external/libyuv/build.gradle
+++ b/external/libyuv/build.gradle
@@ -78,19 +78,27 @@ afterEvaluate {
     tasks.named("reportLibraryMetrics").configure {
         it.dependsOn("prefabReleaseConfigurePackage")
     }
-    tasks.named("prefabReleasePackage").configure {
+    tasks.named("prefabReleaseConfigurePackage").configure {
         def releaseAbiJson = project.file("$buildDir/intermediates/prefab_package/release/prefab/modules/yuv/libs/android.armeabi-v7a/abi.json")
+        def releasePrefabJson = project.file("$buildDir/intermediates/prefab_package/release/prefab/prefab.json")
         it.doLast {
             if (!releaseAbiJson.exists()) {
                 throw new GradleException("$releaseAbiJson does not exist")
             }
+            if (!releasePrefabJson.exists()) {
+                throw new GradleException("$releasePrefabJson does not exist")
+            }
         }
     }
-    tasks.named("prefabDebugPackage").configure {
+    tasks.named("prefabDebugConfigurePackage").configure {
         def debugAbiJson = project.file("$buildDir/intermediates/prefab_package/debug/prefab/modules/yuv/libs/android.armeabi-v7a/abi.json")
+        def debugPrefabJson = project.file("$buildDir/intermediates/prefab_package/debug/prefab/prefab.json")
         it.doLast {
             if (!debugAbiJson.exists()) {
                 throw new GradleException("$debugAbiJson does not exist")
+            }
+            if (!debugPrefabJson.exists()) {
+                throw new GradleException("$debugPrefabJson does not exist")
             }
         }
     }
