Update camera-camera2 to use lib.robolectric
(1) Implement InputConfigurationCompatImpl#isMultiResolution
for API31 and later.
(2) Update the camera/camera-camera2/build.gradle to
use the testImplementation(libs.robolectric)

Bug: 209062465
Test: Run robolectric tests under camera/camera-camera2
Change-Id: I968223d137ca526d07da44342631f3fb81fa4f0d

--- a/camera/camera-camera2/build.gradle
+++ b/camera/camera-camera2/build.gradle
@@ -38,7 +38,7 @@ dependencies {
     testImplementation(libs.testRunner)
     testImplementation(libs.junit)
     testImplementation(libs.truth)
-    testImplementation("org.robolectric:robolectric:4.6.1") // TODO(b/209062465): fix tests to work with SDK 31 and robolectric 4.7
+    testImplementation(libs.robolectric)
     testImplementation(libs.mockitoCore)
     testImplementation(libs.kotlinCoroutinesTest)
     testImplementation("androidx.annotation:annotation-experimental:1.1.0")
